Refactor code to clean up!